# two-person-zero-sum-game

gurobi_C++/: CMakeLists.txt  gameTheoryExample.txt
gurobi_C++/Xcode/: CMakeCache.txt  cmake_install.cmake
gurobi_C++/Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
gurobi_C++/Xcode/Debug/: test_
gurobi_C++/Xcode/zeroSumGame.build/Debug/ALL_BUILD.build/: Script-D0837E400F3A4EB5A02CBF11.sh  dgph
gurobi_C++/Xcode/zeroSumGame.build/Debug/ZERO_CHECK.build/: Script-59F8876E60D845DCB16C7390.sh  dgph
gurobi_C++/Xcode/zeroSumGame.build/Debug/test_.build/: dgph
gurobi_C++/Xcode/zeroSumGame.build/Debug/test_.build/Objects-normal/x86_64/: ZeroSumGame.d  test_.LinkFileList
gurobi_C++/Xcode/zeroSumGame.build/Debug/test_.build/StaticAnalyzer/zeroSumGame/test_/normal/x86_64/: test_.d
gurobi_C++/Xcode/zeroSumGame.xcodeproj/: project.pbxproj
gurobi_C++/Xcode/zeroSumGame.xcodeproj/project.xcworkspace/xcuserdata/xiangli.xcuserdatad/: UserInterfaceState.xcuserstate
gurobi_C++/Xcode/zeroSumGame.xcodeproj/xcuserdata/xiangli.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  test_.xcscheme  xcschememanagement.plist
gurobi_C++/include/: gurobi_c++.h  gurobi_c.h  zeroSumGame.h
gurobi_C++/src/: ZeroSumGame.cpp  test_.cpp
linprog_matlab/: test_.m
linprog_matlab/@ZeroSumGame/: ZeroSumGame.m  maximizePayoff.m  minimizePayoff.m  solveGame.m
